# PythonProjrct1

./: cash_mashine.py  example.py  file1.py  lesson#1.py  pyproject.toml  treining.py
package-name/: pyproject.toml
utils/: add.py
