[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Andrei Tiurin"]

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.3"
numpy = "^2.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "requests (>=2.32.5,<3.0.0)"
]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
